--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -32,8 +32,6 @@
         </p>
         <address>
             <a href="{{ site.google_maps }}">
-                {{ site.address.street }}<br/>
-                {{ site.address.postcode }}<br/>
                 {{ site.address.city }}<br/>
                 {{ site.address.country }}
             </a>
@@ -42,7 +40,7 @@
             <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
         </p>
         <p>
-            <a href="{{ site.email_full }}">{{ site.email }}</a><br/>
+            <a href="{{ site.email_full }}" class="email">{{ site.email }}</a><br/>
             <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
             <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
         </p>
@@ -52,8 +50,7 @@
         {{ content }}
 
     <footer class="thirteen columns">
-        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-            <a href="https://www.github.com/jekyller/vitae">vitae</a> with ♥</p>
+        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> with ♥</p>
     </footer>
     </div>
 </div>
