--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,7 +37,7 @@
             </a>
         </address>
         <p>
-            <a href="{{ site.website_full }}">{{ site.website }}</a><br/>
+            <a href="{{ site.website_full }}">{{ site.website }}</a>
         </p>
         <p>
             <a href="{{ site.email_full }}" class="email">{{ site.email }}</a><br/>
