--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -40,8 +40,8 @@
             <a href="{{ site.website_full }}">{{ site.website }}</a>
         </p>
         <p>
-            <a href="{{ site.email_full }}"><i class="fa fa-mail"></i> mail</a><br/>
-            <a href="https://github.com/{{ site.github }}"><i class="fa fa-envelope"></i> Github</a> /
+            <a href="{{ site.email_full }}"><i class="fa fa-envelope"></i> Mail</a> /<br/>
+            <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
             <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
         </p>
     </header>
