Alteraçao do layout e add informacoes

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,23 +1,27 @@
 <section class="thirteen columns">
-    <h1>Education</h1>
+    <h1>Formação Acadêmica</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>Bacharel em Sistemas de Informação</h1>
+            <span>UFS - Universidade Federal de Sergipe</span>
+            <span><address>Itabaiana, SE</address><time>2019 até 2014</time></span>
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>TCC: Mineração de Texto Aplicada à Auditorial Gorvernamental.</em>
+        </p>
+        <p>
+            <em>Publicações: <a href="https://aisel.aisnet.org/cgi/viewcontent.cgi?article=1088&context=sbis2015">Comparing Text Mining Algorithms for Predicting
+                    Irregularities in Public Accounts</a> </em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>Técnico em Desenvolvimento de Sistemas de Informação</h1>
+            <span>IFS - Instituto Federal de Sergipe</span>
+            <span><address>Lagarto, SE</address><time>2007 até 2009</time></span>
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+            <em>TCC: Projeto Automação Comercial.</em>
         </p>
     </article>
 </section>
