--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,19 +1,19 @@
 <section class="thirteen columns">
-    <h1>Programming Skills</h1>
+    <h1>Skills</h1>
     <article>
         <header>
-            <h1>Software engineering & web development</h1>
+            <h1>Desenvolvimento de Software</h1>
         </header>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>C/C++ & Objective-C</em>
+            &nbsp;&nbsp;<em>Java, JavaScript, Angular</em> &amp; <em>Git</em>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<em>HTML/CSS</em>, <em>Python</em>, <em>kotlin</em> &amp; <em>SQL</em>
         </p>
         <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+            &nbsp;&nbsp;<em>Vuejs, Golang, Dart, Flutter &amp; <em>...</em></em>
         </p>
     </article>
 </section>
