--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>{{ site.title }}</title>
@@ -22,45 +23,60 @@
     <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
     <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
 </head>
+
 <body>
-<div class="container">
-    <header class="three columns">
-        <img src="{{ site.baseurl }}static/img/profile.png" class="me">
-        <h3>{{ site.name }}</h3>
-        <p>
-            <a href="{{ site.tel_full }}"><i class="fa fa-phone"></i>{{ site.tel }}</a>
-        </p>
-        <address>
-            <a href="{{ site.google_maps }}">
-                <i class="fa fa-map"></i>
-                {{ site.address.country }}
-            </a>
-        </address>
-        <p>
-            <a href="{{ site.email_full }}"><i class="fa fa-envelope"></i> Mail</a> /<br/>
-            <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
-            <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
-        </p>
-    </header>
-    <div class="thirteen columns clearfix">
+    <div id="wrap">
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="http://brunopaixao.dev"><i class="fa fa-home"></i></a>
+                </div>
+            </div>
+        </nav>
+        <section>
+            <div class="container">
+                <header class="three columns">
+                    <img src="{{ site.baseurl }}static/img/profile.png" class="me">
+                    <h3>{{ site.name }}</h3>
+                    <p>
+                        <a href="{{ site.tel_full }}"><i class="fa fa-phone"></i>{{ site.tel }}</a>
+                    </p>
+                    <address>
+                        <a href="{{ site.google_maps }}">
+                            <i class="fa fa-map"></i>
+                            {{ site.address.country }}
+                        </a>
+                    </address>
+                    <p>
+                        <a href="{{ site.email_full }}"><i class="fa fa-envelope"></i> Mail</a> /<br />
+                        <a href="https://github.com/{{ site.github }}"><i class="fa fa-github"></i> Github</a> /
+                        <a href="https://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i> Twitter</a>
+                    </p>
+                </header>
+                <div class="thirteen columns clearfix">
 
-        {{ content }}
+                    {{ content }}
 
-    <footer class="thirteen columns">
-        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> with ♥</p>
-    </footer>
+                    <footer class="thirteen columns">
+                        <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> with ♥</p>
+                    </footer>
+                </div>
+            </div>
+        </section>
     </div>
-</div>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', '{{ site.google_analytics }}', 'auto');
-  ga('send', 'pageview');
+        ga('create', '{{ site.google_analytics }}', 'auto');
+        ga('send', 'pageview');
 
-</script>
+    </script>
 </body>
+
 </html>
